# GitHub-Team-Analytics-Agent

./: .gitignore  README.md  REFLECTION.md  docker-compose.yaml  env.example  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf
src/: main.py
src/services/github_client/: config.py  main.py
src/services/github_client/adapters/github/: github_client.py  github_repository.py
src/services/github_client/adapters/llm/: openai_client.py  openai_provider.py
src/services/github_client/agent/: application.py  executor.py  planner.py
src/services/github_client/api/: router.py
src/services/github_client/domain/: analytics_service.py
src/services/github_client/domain/protocols/: github_repository.py  llm_provider.py
src/services/github_client/models/: commit.py  issue.py
src/services/github_client/tools/: github_commits.py  github_diff_summary.py  github_issues.py
