[project]
name = "github-team-analytics-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "requests>=2.33.1",
    "typer>=0.24.2",
    "uvicorn[standard]>=0.46.0",
]
